--- a/gamedoodle/core/templates/core/event_detail.html
+++ b/gamedoodle/core/templates/core/event_detail.html
@@ -1,51 +1,62 @@
 {% extends "core/base.html" %}
 
 {% block content %}
+<div
+  style="
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  "
+>
 
-<h2>
-  {{ event.name }}
-</h2>
-<h3>
-  {{ event.date|date:"d.m.Y" }}
-</h3>
-<p>
-  Vote which games you want to play!
-</p>
 
-<form action="{% url "event-vote" uuid=event.uuid %}" method="POST">
-  {% csrf_token %}
-  <ol>
-    {% for game in games %}
-    <li>
-      {{ game.name }}
-      <button
-        type="submit"
-        value="{{ game.id }}"
-        name="game_id"
-      >
-        +
-      </button>
-      <div>
-        {% for vote in game.votes %}
-          {% if vote.username == username %}
+  <h2 class="title nes-text is-primary">
+    {{ event.name }}
+  </h2>
+
+  <div class="nes-container is-rounded with-title">
+    <p class="title nes-text is-primary">
+      {{ event.date|date:"d.m.Y" }}
+    </p>
+    <p>
+      Vote which games you want to play!
+    </p>
+    <form action="{% url "event-vote" uuid=event.uuid %}" method="POST">
+      {% csrf_token %}
+      <ol>
+        {% for game in games %}
+        <li>
+          {{ game.name }}
+          {% if game.current_user_can_vote %}
           <button
-            class="vote"
             type="submit"
-            value="{{ vote.id }}"
-            name="vote_id"
+            value="{{ game.id }}"
+            name="game_id"
           >
-            -
+            +
           </button>
           {% endif %}
-          {{ vote.username }}
-        </button>{% if not forloop.last%}, {% endif %}
+          <div>
+            {% for vote in game.votes %}
+              {% if vote.username == username %}
+              <button
+                class="vote"
+                type="submit"
+                value="{{ vote.id }}"
+                name="vote_id"
+              >
+                -
+              </button>
+              {% endif %}
+              {{ vote.username }}</button>{% if not forloop.last%}, {% endif %}
+            {% endfor %}
+          </div>
+        </li>
+        {% empty %}
+        No games yet
         {% endfor %}
-      </div>
-    </li>
-    {% empty %}
-    No games yet
-    {% endfor %}
-  </ol>
-</form>
-
+      </ol>
+    </form>
+  </div>
+</div>
 {% endblock%}
