--- a/gamedoodle/core/templates/core/who_are_you.html
+++ b/gamedoodle/core/templates/core/who_are_you.html
@@ -26,7 +26,8 @@
 
       <div class="nes-field">
         <label for="username-field">
-          What is your name?
+          Before we move on,<br>
+          what is your name?
         </label>
         <input
           type="text"
