Allow adding (prefetched) Games via Steam search

--- a/gamedoodle/core/templates/core/base.html
+++ b/gamedoodle/core/templates/core/base.html
@@ -20,6 +20,10 @@
     [dbg], [dbg] * {
       outline: 1px solid red !important;
     }
+
+    .nes-table.hoverable tr:hover {
+      background-color: rgba(0, 0, 0, 0.08);
+    }
   </style>
   <body>
     <div
