--- a/gamedoodle/core/templates/core/event_add_game.html
+++ b/gamedoodle/core/templates/core/event_add_game.html
@@ -11,25 +11,86 @@
   <h2>
     Add another game to <a href="{% url "event-detail" uuid=event.uuid %}">{{ event.name }}</a>
   </h2>
-  <form method="GET">
-    <div
-      class="nes-container with-title"
-      style="margin-top: 32px;"
+  <div
+    class="nes-container with-title"
+    style="margin-top: 32px;"
+  >
+    <form
+      method="GET"
+      action="{% url "event-add-game" uuid=event.uuid %}"
     >
       <p class="title">Option 1: Add via Steam search</p>
-      <div style="display: flex;">
+      <div
+        style="
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+        "
+      >
         <input
           type="text"
           class="nes-input"
-          style="margin-right: 16px;"
+          name="q"
+          value="{{ search_text }}"
+          required
         >
-        <button class="nes-btn">Search</button>
+        <button
+          type="submit"
+          class="nes-btn"
+          style="
+            margin-top: 16px;
+            margin-left: auto;
+          "
+        >
+          Search
+        </button>
       </div>
+    </form>
+    {% if steam_games %}
+    <div
+      class="nes-table-responsive"
+      style="margin-top: 32px"
+    >
+      <table class="nes-table is-bordered hoverable">
+        {% for game in steam_games  %}
+        <tr>
+          <td>
+            <form
+              method="POST"
+              action="{% url "event-add-game-steam" uuid=event.uuid %}"
+            >
+              {% csrf_token %}
+              <input
+                type="text"
+                name="appid"
+                value="{{ game.appid }}"
+                hidden
+              >
+              <button
+                class="nes-btn is-success"
+                style="margin-right: 16px"
+                type="submit"
+              >
+                +
+              </button>
+            </form>
+          </td>
+          <td>
+            {% if game.store_url %}
+            <a href="{{ game.store_url }}" target="_blank">{{ game.name }}</a>
+            {% else %}
+            {{ game.name }}
+            {% endif %}
+          </td>
+        </tr>
+        {% endfor %}
+      </table>
     </div>
-  </form>
+    {% endif %}
+  </div>
 
   <form
-    action="{% url "event-add-game-confirm" uuid=event.uuid %}"
+    action="{% url "event-add-game-manually" uuid=event.uuid %}"
     method="POST"
   >
     {% csrf_token %}
@@ -82,7 +143,6 @@
         Add Game
       </button>
     </div>
-
   </form>
 </div>
 {% endblock%}
