Add is-free badge

--- a/gamedoodle/core/templates/core/event_add_game.html
+++ b/gamedoodle/core/templates/core/event_add_game.html
@@ -149,6 +149,14 @@
             name="store_url"
           >
         </label>
+        <label style="margin-top: 16px;">
+          <input
+            type="checkbox"
+            class="nes-checkbox"
+            name="is_free"
+          >
+          <span>Free to play</span>
+        </label>
       </div>
       <button
         class="nes-btn is-success"
