Add optional Event.details that may include urls rendered as links

--- a/gamedoodle/core/templates/core/event_detail.html
+++ b/gamedoodle/core/templates/core/event_detail.html
@@ -33,6 +33,11 @@
       </h2>
       {% endif %}
     </p>
+    {% if event.details %}
+    <p>
+      {{ event.details|urlize }}
+    </p>
+    {% endif %}
     <p>
       Vote which games to play!
     </p>
