Avoid overflow with long urls

--- a/gamedoodle/core/templates/core/event_detail.html
+++ b/gamedoodle/core/templates/core/event_detail.html
@@ -34,7 +34,7 @@
       {% endif %}
     </p>
     {% if event.details %}
-    <p>
+    <p style="word-break: break-word;">
       {{ event.details|urlize }}
     </p>
     {% endif %}
